# MCP

./: .env  commands  mcp_fastapi_starter copy 2.py  mcp_fastapi_starter copy.py  mcp_fastapi_starter.py  mcp_fastapi_starter_claude.py  pyproject.toml  requirements.txt
